[package]
name = "clilib"
version = "0.1.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/hylandee/clilib/"
license = "MIT"
keywords = ["CLI"]
categories = ["command-line-utilities"]
description = "Library for building Rust CLIs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
